--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:13
@@ -7,18 +5,21 @@ services:
       POSTGRES_DB: devops_db
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
+    ports:
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
   web:
     build: .
     ports:
-      - "8080:5000"
+      - "8000:5000"
+    volumes:
+      - .:/app
     depends_on:
       - db
     environment:
       - DATABASE_URL=postgresql://user:password@db:5432/devops_db
-      - APP_ENV=production
-      - DEBUG=False
+
 volumes:
   postgres_data:
