--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   db:
     image: postgres:13
@@ -5,21 +7,18 @@ services:
       POSTGRES_DB: devops_db
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
-    ports:
-      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
   web:
     build: .
     ports:
-      - "8000:5000"
-    volumes:
-      - .:/app
+      - "8080:5000"
     depends_on:
       - db
     environment:
       - DATABASE_URL=postgresql://user:password@db:5432/devops_db
-
+      - APP_ENV=production
+      - DEBUG=False
 volumes:
   postgres_data:
