--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask-RESTful==0.3.10
 Flask-Marshmallow==0.15.0
 Flask-JWT-Extended==4.5.3
 marshmallow==3.20.1
-psycopg2-binary==2.9.9
+psycopg2-binary
 python-dotenv==1.0.0
 gunicorn==21.2.0
 pytest==7.4.3
