--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,32 +1,69 @@
 version: 0.2
 
-env:
-  variables:
-    AWS_REGION: "us-east-1"
-    ECR_REPO: "695394391846.dkr.ecr.us-east-1.amazonaws.com/devops-app-v2"
-    CONTAINER_NAME: "devops-app-v2" # Debe coincidir con el nombre del contenedor en tu task definition
-    IMAGE_TAG: "latest"
+# buildspec para CodePipeline (ECS Blue/Green) - devops-app-v2
+# Genera la imagen Docker, la sube a ECR y crea artefactos para ECS Deploy
 
 phases:
+  install:
+    runtime-versions:
+      python: 3.10
+      nodejs: 18
+    commands:
+      - echo "=== FASE INSTALL ==="
+      - echo "Instalando dependencias de Python..."
+      - pip install --upgrade pip
+      - if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - echo "✅ Dependencias instaladas"
+      - echo ""
+      - echo "Instalando Newman para tests (opcional)..."
+      - npm install -g newman newman-reporter-htmlextra || true
+
   pre_build:
     commands:
-      - echo "Logging in to Amazon ECR..."
-      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $(echo $ECR_REPO | cut -d'/' -f1)
+      - echo "=== FASE PRE_BUILD ==="
+      - echo "Autenticándose en Amazon ECR..."
+      - export AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION:-us-east-1}
+      - export AWS_ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+      - export IMAGE_REPO_NAME=devops-app-v2
+      - export IMAGE_TAG=latest
+      - export REPOSITORY_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
+      - echo "Repository URI - $REPOSITORY_URI"
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $REPOSITORY_URI
 
   build:
     commands:
-      - echo "Building Docker image..."
-      - docker build -t $CONTAINER_NAME .
-      - docker tag $CONTAINER_NAME:$IMAGE_TAG $ECR_REPO:$IMAGE_TAG
+      - echo "=== FASE BUILD ==="
+      - echo "Construyendo imagen Docker..."
+      - docker build --platform linux/amd64 -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
+      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION
+      - echo "✅ Imagen construida y etiquetada"
+      - docker images
 
   post_build:
     commands:
-      - echo "Pushing Docker image to ECR..."
-      - docker push $ECR_REPO:$IMAGE_TAG
-      - echo "Creating imagedefinitions.json file for ECS..."
-      - printf '[{"name":"%s","imageUri":"%s"}]' "$CONTAINER_NAME" "$ECR_REPO:$IMAGE_TAG" > imagedefinitions.json
+      - echo "=== FASE POST_BUILD ==="
+      - echo "Subiendo imagen a ECR..."
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - docker push $REPOSITORY_URI:$CODEBUILD_RESOLVED_SOURCE_VERSION
+      - echo "✅ Imagen subida a ECR"
+      - echo ""
+      - echo "Generando imagedefinitions.json..."
+      - printf '[{"name":"devops-app-v2","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
       - cat imagedefinitions.json
+      - echo ""
+      - echo "Generando imageDetail.json..."
+      - printf '{"ImageURI":"%s"}' $REPOSITORY_URI:$IMAGE_TAG > imageDetail.json
+      - cat imageDetail.json
+      - echo ""
+      - echo "=== RESUMEN ==="
+      - echo "✅ Imagen: $REPOSITORY_URI:$IMAGE_TAG"
+      - echo "✅ Artefactos listos para ECS"
 
 artifacts:
   files:
     - imagedefinitions.json
+    - imageDetail.json
+    - taskdef.json
+    - appspec.yaml
+  name: devops-app-v2-ecs-deployment-artifact
