--- a/buildspec.yml
+++ b/buildspec.yml
@@ -65,5 +65,5 @@ artifacts:
     - imagedefinitions.json
     - imageDetail.json
     - taskdef.json
-    - appspec.yaml
+    - appspec.yml
   name: devops-app-v2-ecs-deployment-artifact
